Avoid horizontal scroll because of cover picture decoration.

--- a/assets/styles/layouts/_front-page.scss
+++ b/assets/styles/layouts/_front-page.scss
@@ -9,6 +9,7 @@
     background-position: center center;
     background-size: cover;
     height: 30vh;
+    overflow: hidden;
     position: relative;
 
     &:after {
